--- a/docs/getting-started/retrieving-api-key.mdx
+++ b/docs/getting-started/retrieving-api-key.mdx
@@ -8,3 +8,5 @@ To run visual UI tests using Eyes, you need to obtain an API key. You can do so 
 1. If you don't have an Eyes account yet, you can create a free account and skip to step 3.
 2. If you already have an Eyes account, then login to [Applitools](https://eyes.applitools.com) or to your dedicated cloud.
 3. Click on the main menu icon  at the top right of the window and choose the **"My API Key"** option. Your key will be displayed and selected.
+
+![Retrieving your API key](/img/API-key.gif)
