--- a/docs/platform/applitools-eyes.mdx
+++ b/docs/platform/applitools-eyes.mdx
@@ -1,13 +1,14 @@
 ---
 slug: /platform/applitools-eyes
-title: Eyes
-
+title: Applitools Eyes Documentation
+sidebar_label: Eyes
 ---
 
+# Applitools Eyes
 
 Applitools Eyes is a powerful platform for automated visual UI testing that supports full page screenshots, page layout matching, cross-device and browser testing, test batching, baseline branching and merging, automated baseline maintenance, collaboration features, and much more.
 
-[Applitools has SDKs](https://applitools.com/tutorial) for the all popular programming languages and test runners providing full test coverage for web, mobile, desktop, PDF, TV OS's, IoT, Images, and more.
+[Applitools has SDKs](/#quickstart) for the all popular programming languages and test runners providing full test coverage for web, mobile, desktop, PDF, TV OS's, IoT, Images, and more.
 
 ## Benefits
 ### Scale Your Testing Exponentially
