--- a/docs/platform/applitools-nmg.mdx
+++ b/docs/platform/applitools-nmg.mdx
@@ -1,9 +1,9 @@
 ---
-slug: /platform/applitools-NMG
-title: Native Mobile Grid
-
+slug: /platform/applitools-nmg
+title: Applitools Native Mobile Grid
+sidebar_label: Native Mobile Grid
 ---
-
+# Applitools Native Mobile Grid
 
 Applitools Native Mobile Grid is the next generation mobile-device cloud that allows testers and developers to automate testing of their mobile applications across different iOS and Android devices.
 
