--- a/docs/platform/applitools-ufg.mdx
+++ b/docs/platform/applitools-ufg.mdx
@@ -1,8 +1,9 @@
 ---
 slug: /platform/applitools-ufg
-title: Ultrafast Grid
-
+title: Applitools Ultrafast Grid
+sidebar_label: Ultrafast Grid
 ---
+# Applitools Ultrafast Grid
 
 ## What Is The Ultrafast Grid?
 
